<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FarmKu</string>
    <string name="kata_sandi_anda">********</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="masuk">Masuk</string>
    <string name="email_atau_nomor_telepon_anda">E-mail / Nomor Telepon Anda</string>
    <string name="email_atau_nomor_telepon">E-mail / Nomor Telepon</string>
    <string name="email_anda">Email Anda</string>
    <string name="email">Email</string>
    <string name="lupa_kata_sandi">Lupa Kata Sandi?</string>
    <string name="atau">Atau</string>
    <string name="belum_memiliki_akun">Belum memiliki akun?</string>
    <string name="daftar_sekarang">Daftar Sekarang</string>
    <string name="logo_farmku">Logo FarmKu</string>
    <string name="kirim">Kirim</string>
    <string name="forgot_subtitle_email">Jangan khawatir! Isikan e-mail anda dan kami akan mengirimkan OTP pada e-mail anda.</string>
    <string name="forgot_subtitle_hp">Jangan khawatir! Isikan Nomor HP anda dan kami akan mengirimkan OTP pada Nomor HP anda.</string>
    <string name="selanjut_text">Selanjutnya</string>
    <string name="lewati_text">Lewati</string>
    <string name="masuk_dengan_google">Masuk dengan Google</string>
    <string name="email_address_hint">Email Address</string>
    <string name="error_password_text">Password must be at least 8 characters</string>
    <string name="buat_akun_baru_text">Buat Akun Baru</string>
    <string name="appbar_register">AppBar Register</string>
    <string name="sudah_memiliki_akun">Sudah Memiliki Akun?</string>
    <string name="login_sekarang">Login Sekarang</string>
    <string name="nomor_telepon_anda">Nomor Telepon Anda</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="daftarkan_nomor_telepon_anda">Daftarkan Nomor Telepon Anda</string>
    <string name="nama_lengkap_anda">Nama Lengkap Anda</string>
    <string name="alamat_anda">Alamat Anda</string>
    <string name="alamat">Alamat</string>
    <string name="ulangi_kata_sandi">Ulangi Kata Sandi</string>
    <string name="ulangi_kata_sandi_anda">Ulangi Kata Sandi Anda</string>
    <string name="dengan_ini_saya_menyetujui_syarat_dan_ketentuan_yang_berlaku">Dengan ini saya menyetujui syarat dan ketentuan yang berlaku.</string>
    <string name="showPassword">Kata Sandi Anda</string>
    <string name="bridge_the_gap_with_plants_text">Bridge the Gap with Plants</string>
    <string name="masukan_otp_num_text">Masukkan kode OTP yang telah dikirimkan melalui SMS pada nomor anda.</string>
    <string name="masukan_otp_email_text">Masukkan kode OTP yang telah dikirimkan melalui e-mail pada e-mail anda.</string>
    <string name="masukkan_kode_otp_text">Masukkan Kode OTP</string>
    <string name="hint_text_otp">_</string>
    <string name="lanjut_text">Lanjut</string>
    <string name="resend_otp_text">Resend OTP</string>
    <string name="kirim_ulang_text">Kirim ulang kode OTP dalam 1:59</string>
    <string name="kirim_ulang">Kirim Ulang</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nomor_hp_text">Nomor HP</string>
    <string name="email_text">Email</string>
    <string name="ganti_kata_sandi_anda_text">Ganti kata sandi anda</string>
    <string name="buatlah_kata_sandi_anda_yang_mudah_diingat_tapi_tidak_mudah_ditebak_text">Buatlah kata sandi anda yang mudah diingat tapi tidak mudah ditebak.</string>
    <string name="ubah_text">Ubah</string>
    <string name="onboarding1_title">Perkenalkan Farmku</string>
    <string name="onboarding1_subtitle">Teknologi canggih yang memberdayakan petani Indonesia. Sampaikan selamat tinggal pada tantangan terkait tanah dan penyakit tanaman. Bergabunglah bersama kami dalam mengubah masa depan pertanian</string>
    <string name="onboarding2_title">Maksimalkan hasil pertanianmu dengan Farmku</string>
    <string name="onboarding2_subtitle">mitra terpercaya dalam mengoptimalkan kesuburan tanah dan melawan penyakit tanaman. Mulailah mengungkap potensi lahanmu hari ini</string>
    <string name="onboarding3_title">Farmku</string>
    <string name="onboarding3_subtitle"> Menyambut era baru pengetahuan bagi para petani di Indonesia. Tingkatkan hasil panenmu dan lindungi tanamanmu dengan solusi analisis tanah dan deteksi penyakit tanaman terdepan. Rasakan kekuatan pertanian presisi.</string>
    <string name="memulai_aplikasi_text">Masuk Aplikasi</string>
    <string name="mohon_isi_seluruh_data">Mohon isi seluruh data</string>
    <string name="nama_lengkap_text">Nama Lengkap</string>
    <string name="syarat_dan_ketentuan_text">Syarat dan Ketentuan</string>
    <string name="isi_syarat_dan_ketentuan_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="terima_text">Terima</string>
    <string name="tolak_text">Tolak</string>
    <string name="password_tidak_sama_text">Password yang anda isi tidak sama</string>
    <string name="pilih_provinsi_anda">Pilih provinsi anda</string>
    <string name="pilih_kabupaten_kota_anda">Pilih kabupaten/kota anda</string>
    <string name="pilih_kecamatan_anda">Pilih kecamatan anda</string>
    <string name="pilih_desa_kelurahan_anda">Pilih desa/kelurahan anda</string>
    <string name="anda_harus_menyetujui_syarat_dan_ketentuan_untuk_mendaftar">Anda harus menyetujui Syarat dan Ketentuan untuk mendaftar</string>
    <string name="name_text">Name</string>
    <string name="notification_button_text">Notification button</string>
    <string name="cari_disini_text">Cari Disini</string>
    <string name="template_hi">Hi, John Doe</string>
    <string name="welcome_msg">Selamat Datang di FarmKu</string>
    <string name="cek_tanaman_text">Cek Tanaman</string>
    <string name="penyakit_terdeteksi_text">Penyakit Terdeteksi</string>
    <string name="lahan_terdaftar_text">Lahan Terdaftar</string>
    <string name="all_features_text">All Features</string>
    <string name="lahan_saya_text">Lahan Saya</string>
    <string name="deteksi_penyakit_text">Deteksi Penyakit</string>
    <string name="hot_news_text">Hot News</string>
    <string name="dummy_date">12 Oktober 2023</string>
    <string name="dummy_title_news">SMART PRECISION FARMING di Sukoharjo sedang tidak baik baik ..</string>
    <string name="daftar_lahan_text">Daftar Lahan</string>
    <string name="home">Home</string>
    <string name="berita">Berita</string>
    <string name="profile">Profile</string>
    <string name="descriptiontext">description</string>
    <string name="detect_text">Deteksi Penyakit</string>
    <string name="melalui_kamera_text">Melalui Kamera</string>
    <string name="melalui_galeri_text">Melalui Galeri</string>
    <string name="result_text">Result: %s</string>
    <string name="confidence_text">Confidence: %d%%</string>
    <string name="null_picture_message">Please add the picture you want to detect</string>
    <string name="title_activity_soil_data_collection_detail_maps">
        SoilDataCollectionDetailMapsActivity
    </string>
    <string name="hint_double">0.0</string>
    <string name="tambahkan_data_tanah">Tambahkan Data Tanah</string>
    <string name="n_dummy_text">N: 10.5</string>
    <string name="p_dummy_text">P: 21.4</string>
    <string name="k_dummy_text">K: 21.4</string>
    <string name="gambar_dari_data_collection_text">Gambar dari Data Collection</string>
    <string name="tombol_add_data_collection_text">Tombol Add Data Collection</string>
    <string name="land_name_text">Land Name</string>
    <string name="appbar_land_activity_text">AppBar Land Activity</string>
    <string name="Silahkan_ambil_foto_terlebih_dahulu">Silahkan ambil foto terlebih dahulu</string>
    <string name="ph_7_8">pH: 7.8</string>
    <string name="nama_varietas">Nama Varietas</string>
    <string name="nitrogen_n">Nitrogen (N)</string>
    <string name="kalium_k">Kalium (K)</string>
    <string name="fosfor_p">Fosfor (P)</string>
    <string name="ph">pH</string>
    <string name="double_dummy">0.0</string>
    <string name="appbar_add_land">App Bar Add Land</string>
    <string name="add_new_land">Tambah Lahan Baru</string>
    <string name="nama_land_text">Nama Lahan</string>
    <string name="nama_land_anda_text">Nama Land Anda</string>
    <string name="luas_area_text">Luas Area Lahan</string>
    <string name="tambah_lahan">Tambah Lahan</string>
    <string name="luas_area_lahan_anda_text">Luas Area Lahan Anda</string>
    <string name="province_text">Provinsi</string>
    <string name="district_text">Kabupaten</string>
    <string name="regency_text">Kecamatan</string>
    <string name="village_text">Kelurahan</string>
    <string name="pilih_lokasi_lahan">Pilih Lokasi Lahan</string>
    <string name="pilih_variety">Pilih variety anda</string>
    <string name="login_berhasil_text">Login Berhasil</string>
    <string name="register_berhasil_text">Register Berhasil</string>
    <string name="register_gagal_text">Register Gagal</string>
    <string name="token_anda_menghilang_text">Token anda menghilang</string>
    <string name="login_gagal_text">Login Gagal</string>
    <string name="data_alamat_menghilang_text">Data alamat menghilang</string>
    <string name="deteksi_berhasil_text">Deteksi Berhasil</string>
    <string name="terdapat_error_saat_deteksi_text">Terdapat error saat deteksi</string>
    <string name="deteksi_gagal_text">Deteksi gagal</string>
    <string name="error_saat_ambil_data_soil_text">Error saat ambil data soil</string>
    <string name="success_text">SUCCESS</string>
    <string name="failed_text">Gagal</string>
    <string name="berhasil_text">Berhasil</string>
    <string name="error_saat_mengirim_data_soil_text">Error saat mengirim data soil</string>
    <string name="add_new_land_success_text">Tambah lahan baru berhasil</string>
    <string name="add_new_land_failed_text">Tambah lahan baru gagal</string>
    <string name="tambahkan_data_tanah_text">Tambahkan data tanah</string>
    <string name="maksimum_karakter_tercapai_text">Maksimum karakter tercapai</string>
    <string name="ups_anda_belum_mendaftarkan_lahan_anda_text">Ups, Anda belum mendaftarkan lahan anda</string>
</resources>