<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/appBarFillData"
            android:layout_width="414dp"
            android:layout_height="158dp"
            android:contentDescription="@string/appbar_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/appbar_register" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/buat_akun_baru_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewNamaFillData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/nama_lengkap_text"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarFillData" />

        <EditText
            android:id="@+id/txtNameFillData"
            android:layout_width="352dp"
            android:layout_height="48dp"
            android:background="@drawable/oval_background"
            android:elevation="15dp"
            android:ems="10"
            android:hint="@string/nama_lengkap_anda"
            android:inputType="textPersonName"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNamaFillData" />

        <TextView
            android:id="@+id/textViewEmailFillData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/textViewNamaFillData"
            app:layout_constraintStart_toStartOf="@+id/textViewNamaFillData"
            app:layout_constraintTop_toBottomOf="@+id/txtNameFillData" />

        <com.farmkuindonesia.farmku.component.CustomViewEmailEditText
            android:id="@+id/txtEmailFillData"
            android:layout_width="352dp"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/oval_background"
            android:elevation="15dp"
            android:ems="10"
            android:hint="@string/email_anda"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/txtNameFillData"
            app:layout_constraintStart_toStartOf="@+id/txtNameFillData"
            app:layout_constraintTop_toBottomOf="@+id/textViewEmailFillData" />

        <TextView
            android:id="@+id/textViewAlamatFillData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alamat"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/textViewEmailFillData"
            app:layout_constraintStart_toStartOf="@+id/textViewEmailFillData"
            tools:layout_editor_absoluteY="301dp" />

        <Spinner
            android:id="@+id/spinnerProvince"
            android:layout_width="352dp"
            android:layout_height="47dp"
            android:layout_marginTop="56dp"
            android:background="@drawable/oval_background"
            android:elevation="15dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.593"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEmailFillData" />

        <Spinner
            android:id="@+id/spinnerDistrict"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/oval_background"
            android:elevation="15dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/spinnerProvince"
            app:layout_constraintStart_toStartOf="@+id/spinnerProvince"
            app:layout_constraintTop_toBottomOf="@+id/spinnerProvince" />

        <Spinner
            android:id="@+id/spinnerRegency"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/oval_background"
            android:elevation="15dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/spinnerDistrict"
            app:layout_constraintStart_toStartOf="@+id/spinnerDistrict"
            app:layout_constraintTop_toBottomOf="@+id/spinnerDistrict" />

        <Spinner
            android:id="@+id/spinnerVillage"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/oval_background"
            android:elevation="15dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/spinnerRegency"
            app:layout_constraintStart_toStartOf="@+id/spinnerRegency"
            app:layout_constraintTop_toBottomOf="@+id/spinnerRegency" />

        <TextView
            android:id="@+id/textViewKataSandiFillData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kata_sandi"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/spinnerVillage"
            app:layout_constraintStart_toStartOf="@+id/spinnerVillage"
            app:layout_constraintTop_toBottomOf="@+id/spinnerVillage" />

        <com.farmkuindonesia.farmku.component.CustomViewPasswordEditText
            android:id="@+id/txtKataSandiFillData"
            android:layout_width="352dp"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/oval_background"
            android:elevation="15dp"
            android:ems="10"
            android:hint="@string/kata_sandi_anda"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/textViewKataSandiFillData"
            app:layout_constraintStart_toStartOf="@+id/textViewKataSandiFillData"
            app:layout_constraintTop_toBottomOf="@+id/textViewKataSandiFillData" />

        <TextView
            android:id="@+id/textViewUlangKataSandiFillData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ulangi_kata_sandi"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/txtKataSandiFillData"
            app:layout_constraintStart_toStartOf="@+id/txtKataSandiFillData"
            app:layout_constraintTop_toBottomOf="@+id/txtKataSandiFillData" />

        <com.farmkuindonesia.farmku.component.CustomViewPasswordEditText
            android:id="@+id/txtUlangKataSandiFillData"
            android:layout_width="352dp"
            android:layout_height="46dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/oval_background"
            android:elevation="15dp"
            android:ems="10"
            android:hint="@string/ulangi_kata_sandi_anda"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/textViewUlangKataSandiFillData"
            app:layout_constraintStart_toStartOf="@+id/textViewUlangKataSandiFillData"
            app:layout_constraintTop_toBottomOf="@+id/textViewUlangKataSandiFillData" />

        <CheckBox
            android:id="@+id/cbSyaratKetentuan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:text="@string/dengan_ini_saya_menyetujui_syarat_dan_ketentuan_yang_berlaku"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtUlangKataSandiFillData" />

        <Button
            android:id="@+id/btnRegisterFillData"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/light_green"
            android:text="@string/daftar_sekarang"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cbSyaratKetentuan" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
