<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.forgotpassword.ResetPasswordActivity">

    <ImageButton
        android:id="@+id/btnBackOTP"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBackOTP"
        app:srcCompat="@drawable/forgetpasswordlogo" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/ganti_kata_sandi_anda_text"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textViewSubtitleOTP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/buatlah_kata_sandi_anda_yang_mudah_diingat_tapi_tidak_mudah_ditebak_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textViewKataSandiFillData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:text="@string/kata_sandi"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSubtitleOTP" />

    <com.farmkuindonesia.farmku.component.CustomViewPasswordEditText
        android:id="@+id/txtKataSandiFillData"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/oval_background"
        android:elevation="15dp"
        android:ems="10"
        android:hint="@string/kata_sandi_anda"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewKataSandiFillData" />

    <TextView
        android:id="@+id/textViewUlangKataSandiFillData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/ulangi_kata_sandi"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtKataSandiFillData" />

    <com.farmkuindonesia.farmku.component.CustomViewPasswordEditText
        android:id="@+id/txtUlangKataSandiFillData"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/oval_background"
        android:elevation="15dp"
        android:ems="10"
        android:hint="@string/ulangi_kata_sandi_anda"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUlangKataSandiFillData" />

    <Button
        android:id="@+id/btnLanjut"
        android:layout_width="116dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/light_green"
        android:text="@string/ubah_text"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUlangKataSandiFillData" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="146dp"
        android:layout_height="37dp"
        android:layout_marginBottom="8dp"
        android:alpha="0.4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo_long" />



</androidx.constraintlayout.widget.ConstraintLayout>
